syntax = "proto3";
package im;
option java_package = "com.iisquare.im.protobuf";
message Auth {
   string token = 1;
}
message AuthResult {
   string user_id = 1;
   int64 version = 2;
}
message Contact {
   message Row {
      string user_id = 1;
      string message_id = 2;
      string direction = 3; // 方向：发送或接收
      string content = 4;
      int64 time = 5;
   }
   repeated Row rows = 1;
}
message Uncontact {
   string user_id = 1;
}
